# xai

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: azure-static-web-apps-happy-bay-03eea5e00.yml  mafagent-AutoDeployTrigger-b7453a48-7f9f-43c8-aa2a-3d84ec8c72c8.yml
deploy/: docker-compose.yml
frontend/src/app/: layout.tsx  providers.tsx
src/: exceptions.py  middleware.py
src/agents/langgraph/: graph.py
src/api/: README.md  router.py
src/api/v1/: __init__.py  chatbot.py
src/configs/: app_config.py
src/configs/deploy/: __init__.py
src/configs/middleware/: __init__.py
src/configs/packaging/: __init__.py  pyproject.py
src/core/: __init__.py  logger.py  metrics.py  middleware.py
src/core/db/: __init__.py
src/db/: __init__.py  cosmos.py  cosmos_chat_store.py
src/models/: __init__.py  base.py  user_model.py
src/schemas/: common_schema.py
src/services/: agent.py  tools.py
src/services/agents/: __init__.py
src/services/agents/gym_agent/: __init__.py  root.py
src/services/agents/middleware/: __init__.py
src/services/agents/travel/: chat.py  route.py  search.py  state.py  trips.py
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_exceptions.py  test_middleware.py  test_tools.py
