[project]
name = "maf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-langgraph>=0.0.22",
    "copilotkit>=0.1.74",
    "fastapi>=0.115.14",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "opentelemetry-sdk>=1.39.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.31",
    "starlette-prometheus>=0.10.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
